deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: genai-app
  labels:
    name: genai-app
